--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,21 @@
   </head>
   <body class="container">
     <form class="search-form" id="search-form">
-      <input class="form-control" type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-      <button type="submit" class='btn btn-info'>Search</button>
+      <input
+        class="form-control"
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+      <button type="submit" class="btn btn-info">Search</button>
     </form>
     <div class="gallery">
       <!-- Карточки изображений -->
-     
     </div>
-    <button type="button" class="load-more is-hidden btn btn-primary">Load more</button>
-    <script src="index.js"></script>
+    <button type="button" class="load-more is-hidden btn btn-primary">
+      Load more
+    </button>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
