--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
     <button type="button" class="load-more is-hidden btn btn-primary">
       Load more
     </button>
+    <!-- <script type="module" src="/path/to/infinite-scroll.pkgd.min.js"></script> -->
+
     <script type="module" src="index.js"></script>
   </body>
 </html>
